--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "ShareBook App",
-  "name": "ShareBook App by @k",
+  "name": "ShareBook App",
   "icons": [
     {
      "src": "\/android-icon-36x36.png",
