--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "framer-motion": "^4.1.17",
     "postcss": "^8.3.0",
     "react": "^17.0.2",
+    "react-add-to-homescreen": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.7.1",
     "react-redux": "^7.2.4",
