--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ideasio/add-to-homescreen-react": "^1.0.7",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.12.0",
@@ -11,7 +12,6 @@
     "framer-motion": "^4.1.17",
     "postcss": "^8.3.0",
     "react": "^17.0.2",
-    "react-add-to-homescreen": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.7.1",
     "react-redux": "^7.2.4",
