--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "ShareBook App",
-  "name": "ShareBook App",
+  "short_name": "ShareBook",
+  "name": "ShareBook",
   "icons": [
     {
       "src": "favicon.ico",
