--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "react-sharebook",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
