--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.5",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "socket.io": "^4.1.2"
   }
 }
