--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.5",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.2",
     "socket.io": "^4.1.2"
   }
 }
