--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^4.1.17",
     "postcss": "^8.3.0",
     "react": "^17.0.2",
@@ -17,6 +18,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
     "redux": "^4.1.0",
     "socket.io-client": "^4.1.2",
     "timeago.js": "^4.0.2",
