--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^4.1.17",
+    "jsonwebtoken": "^8.5.1",
     "postcss": "^8.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
