--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,20 @@
 {
     "version": 2,
-    "name": "music-album",
     "builds": [
-       { "src": "app.js", "use": "@vercel/node" }
+      {
+        "src": "./app.js", 
+        "use": "@vercel/node"
+      },
+      {
+        "src": "./client/build",   
+        "use": "@vercel/static"
+      }
     ],
-    "routes": [
-       { "src": "/(.*)", "dest": "/app.js" }
+  
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "./app.js"
+      }
     ]
- }
+  }
