--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "client-build": "cd ../client && yarn install && yarn run build && cd ../server && npm install"
+    "client-build": "yarn"
   },
   "keywords": [],
   "author": "",
